# Kernel

./: .gitignore  BFT_STRESS_TESTS.md  CI_CD_PIPELINE.md  CMakeLists.txt  CONTRIBUTING.md  ChiralNonlinearGate.hpp  IPC_IMPLEMENTATION.md  KernelPipeline.hpp  KernelState.hpp  LadderChiralSearch.hpp  LadderSearchBenchmark.hpp  MasterEigenOracle.hpp  NIST_EVALUATION.md  NIST_IR8356_BENCHMARKS.md  NOISE_SCALING_PHASE_TRANSITION.md  POW_NONCE_SEARCH_RESULTS.md  PalindromePrecession.hpp  README.md  SpectralBridge.hpp  SqrtNKernel.hpp  TimeCrystalRPC.hpp  TimeCrystalSimulation.hpp  benchmark_nist_ir8356.cpp  benchmark_pow_nonce_search.cpp  benchmark_scaling_falsification.cpp  break_system.py  ohm_coherence_duality.hpp  plot_mu_137_cycle.py  plot_scaling.py  plot_torus_topology.py  quantum_kernel_v2  quantum_kernel_v2.cpp  qudit_kernel.cpp  sanity_checkpoint.cpp  spectral_bridge.hpp  sqrt_n_demo.cpp  test_battery_analogy  test_battery_analogy.cpp  test_bft_extended.cpp  test_bft_stress.cpp  (+23 more)
.github/workflows/: cd.yml  ci.yml  kernelsync-tests.yml  lean-proof-check.yml  mu8-pipeline.yml  pages.yml  project-automation.yml  python-tests.yml  sanity-checkpoint.yml
_codeql_build_dir/: KernelConfig.cmake  Makefile  test_ipc
cmake/: KernelConfig.cmake.in
docs/: B11_palindrome_precession.md  architecture.md  canonical_map.md  index.html  master_derivations.tex  observer_reality_essay.md  overview.md  phase_battery_spec.md  scaling_laws.md  sympy_verified_formulas.tex  theta_sqrt_n_writeup.aux  theta_sqrt_n_writeup.tex  theta_sqrt_n_writeup.toc
docs/discoveries/: DISCOVERIES.md  FINAL_SUMMARY.md  PRECISION_RESULTS.md
empirical-validation/: README.md  canonical_map.py  checksums.py  requirements.txt  run_validation.py
empirical-validation/benchmarks/: mu8_benchmark.py  universal_benchmark.py
empirical-validation/data_ingestion/: __init__.py  codata.py  cosmological.py  nist.py
empirical-validation/models/: balance_of_payments.py
empirical-validation/optimizers/: __init__.py  mu8_cycle_optimizer.py  universal_solve.py
empirical-validation/tests/: __init__.py  test_canonical_map.py  test_mu8_optimizer.py  test_universal_solve.py  test_validation.py
empirical-validation/validators/: __init__.py  coherence.py  eigenvalue.py  fine_structure.py  golden_ratio.py  mu8_optimizer.py  particle_mass.py  spacetime.py
examples/: BasicProofs.lean  PhysicsExamples.lean
experiments/kernelsync_demo/: README.md  grover_analogy.md  kernelsync_energy_proxy_sim.py  requirements.txt
experiments/passive_ghz_demo/: README.md  analysis_ringdown.py  config_example.yaml  generate_waveforms.py  requirements.txt  run_demo.py  upload_hdawg.py
formal-lean/: BidirectionalTime.lean  Chemistry.lean  CriticalEigenvalue.lean  CrossChainDeFiAggregator.lean  CryptoBridge.lean  EthereumTradingBot.lean  FineStructure.lean  ForwardClassicalTime.lean  GravityQuantumDuality.lean  KernelAxle.lean  LeadQuantization.lean  Main.lean  OhmTriality.lean  ParticleMass.lean  PumpFunBot.lean  Quantization.lean  README.md  SilverCoherence.lean  Simulation.lean  SpaceTime.lean  SpeedOfLight.lean  TimeCrystal.lean  Turbulence.lean  lakefile.lean
go/gen_pi_digits/: go.mod  main.go
go/sanity_checkpoint/: go.mod  main.go
pi/: pi_2million_digits.txt  pi_consecutive_digits.txt
pull/: 17_description.md
python/: lean_verified_kernel.py  requirements_visualize.txt  sympy_engine.py  visualize_phase_battery.py
python/analysis/: coherence_analysis.py  global_analysis.py  precision_analysis.py  verify_ceiling.py
python/mining/: MINING_GUIDE.md  README.md  agent_coordinator.py  agent_sweep_runner.py  bitcoin_mainnet_miner.py  coherent_regtest_miner.py
src/: Eigenverse.lean  MathUniverse.lean
tests/: ConsistencyChecks.lean
(+12 files in other folders)
